Views: fix tab close button's focus ring in RTL

Also removes the explicit focus ring layout since ImageButton::Layout
takes care of this.

Bug: 854934
Change-Id: Ib49442d1db95577d9e4f7d0497e1b3bd50bf2cbc
Reviewed-on: https://chromium-review.googlesource.com/1124765
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572303}
Former-commit-id: 0e6fbdf867ad100cb5358f7c012f1c43310c1605